# zelos

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  azure-pipelines.yml  codecov.yml  conftest.py  pyproject.toml  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
docs/args/: args.rst
docs/tutorials/: 01_cmdline.md  02_scripting.md  03_using_hooks.md  04_writing_plugins.md  05_syscall_limit_plugin.md  06_snapshot_overlay.md  07_zml_and_feeds.md
examples/: test_examples.py
examples/hello/: README.md  hello.py
examples/inmemory_strings/: strings_plugin.py  strings_script.py
examples/script_brute/: README.md  brute.py
examples/script_bypass/: README.md  bypass.py
examples/script_fn_args/: transform.py
src/zelos/: __init__.py  __main__.py  breakpoints.py  config_gen.py  engine.py  enums.py  exceptions.py  feeds.py  file_system.py  hooks.py  util.py  (+11 more)
tests/: __init__.py  encrypt_test_file.py  run_trace.py  test_api.py  test_args.py  test_config.py  test_emu_helper.py  test_feeds.py  test_file_system.py  test_handles.py  test_heap_manager.py  test_hook_manager.py  test_kernel.py  test_libutils.py  test_linux_arm.py  test_linux_mips.py  test_linux_x64.py  test_linux_x86.py  test_ltp_syscalls.py  test_memory_manager.py  test_overlay.py  test_processes.py  test_procfilesystem.py  test_runner.py  test_script_interface.py  test_snapshot.py  test_sockets.py  test_syscall_limiter.py  test_syscall_manager.py  test_thread_manager.py  test_trace.py  test_unicorn.py  test_zelos_profile.py  test_zml.py
(+164 files in other folders)
