[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip="__init__.py"
use_parentheses=true

known_first_party="zelos"
known_third_party=["capstone", "colorama", "configargparse", "dnslib", "hypothesis", "lief", "pypacker", "recommonmark", "setuptools", "sortedcontainers", "sphinx_rtd_theme", "termcolor", "unicorn", "verboselogs", "zelos"]

[tool.pytest]
junit_family = "xunit2"
